# fullstack-template-supabase-vercel

./: .editorconfig  .env.example  .gitignore  AI_INIT_PROJECT.md  CLAUDE.md  Makefile  README.md  RULES.md  Untitled-3.py  ai-rules-and-skills-review.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.json  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: cache.py  config.py  dependencies.py  observability.py  rate_limit.py  rbac.py  security.py  token_blacklist.py
backend/app/middleware/: observability_middleware.py  request_logging_middleware.py
backend/app/models/: __init__.py  account.py  base.py  contact.py  event.py  password_reset_token.py  role.py  table_change.py  user.py
backend/app/orm/: __init__.py  base.py  postgres_orm.py  query.py  supabase_orm.py
backend/app/schemas/: __init__.py  account.py  auth.py  contact.py  event.py  role.py  table_change.py  user.py
backend/app/services/: account_service.py  auth_service.py  change_service.py  contact_service.py  event_service.py
backend/app/utils/: migrate.py  seed.py
backend/migrations/: 001_initial.sql  002_add_mobile_phone_2.sql  002_optimize_indexes.sql  003_partition_events.sql  004_table_change_notify.sql
backend/tests/: conftest.py
backend/tests/e2e/: test_full_flow.py
(+263 files in other folders)
